--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:8889/capstone
-spring.datasource.username=capstone
-spring.datasource.password=final_project
+spring.datasource.url=jdbc:mysql://localhost:8889/Capstone
+spring.datasource.username=Capstone
+spring.datasource.password=black_truffles
 
 # Specify the DBMS
 spring.jpa.database = MYSQL
