--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Database connection settings
-spring.datasource.url=jdbc:mysql://localhost:8889/Capstone
+spring.datasource.url=jdbc:mysql://localhost:8889/Capstone?useSSL=false
 spring.datasource.username=Capstone
 spring.datasource.password=black_truffles
 
